@@ -1,5 +1,14 @@
 2011-06-03  Alexis Menard  <alexis.menard@openbossa.org>
 
+        Reviewed by Andreas Kling.
+
+        To support building namespaced Qt, we require that forward-declarations
+        of Qt classes be wrapped in QT_BEGIN_NAMESPACE and QT_END_NAMESPACE.
+
+        * WebCoreSupport/FrameLoaderClientQt.h:
+
+2011-06-03  Alexis Menard  <alexis.menard@openbossa.org>
+
         Unreviewed build fix after r87902.
 
         To support building namespaced Qt, we require that forward-declarations
