@@ -1,3 +1,12 @@
+2011-06-03  Alexis Menard  <alexis.menard@openbossa.org>
+
+        Reviewed by Andreas Kling.
+
+        To support building namespaced Qt, we require that forward-declarations
+        of Qt classes be wrapped in QT_BEGIN_NAMESPACE and QT_END_NAMESPACE.
+
+        * platform/network/qt/QtMIMETypeSniffer.h:
+
 2011-06-01  Andras Becsi  <abecsi@webkit.org>
 
         Reviewed by Csaba Osztrogonác.
